# clamreef-agent

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  TESTING_OAUTH2.md  agent.toml  deny.toml  plan.md  test-oauth2.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
examples/: agent-oauth2.toml  agent.toml
src/: error.rs  lib.rs  main.rs
src/auth/: mod.rs  oauth2.rs
src/clamav/: client.rs  mod.rs  parser.rs  types.rs
src/config/: mod.rs
src/metrics/: mod.rs
src/scheduler/: mod.rs
src/telemetry/: mod.rs
tests/: integration_tests.rs
